# VSingerBoard

./: .gitignore  COMMIT_MSG.tmp  GEMINI.md  LICENSE  README.md  VSingerBoard.spec  build.sh  logo.icns  main.py  pack.sh  pyproject.toml  setup.py  version.txt
.github/workflows/: build.yml  ci.yml  push.yml  python-publish.yml  release.yml
assets/douyinjs/: sign_v1.js
assets/icons/: logo.icns
doc/: README.md
douyinjs/: a_bogus.js
frontend/: .eslintrc-auto-import.json  .prettierrc.json  auto-imports.d.ts  components.d.ts  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  uno.config.ts  unocss.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  route-map.d.ts
hooks/: hook-src.py  rthook.py
resources/douyinjs/: sign_v0.js  ‎webmssdk.js
scripts/: setup_darwin.py  setup_linux.py  setup_win32.py
src/bili/: __init__.py  jsapi.py  live.py
src/database/: __init__.py  config.py  db.py  model.py
src/douyin/: __init__.py  ac_signature.py  client.py  douyin.proto  live.py  protobuf.py  signature.py
src/jsBridge/: __init__.py  bilibili.py  douyin.py  jsapi.py  worker.py
src/live/: __init__.py  bilibili.py  doubi_ws.py  douyin.py
src/manager/: __init__.py  gui_manager.py  ipc_handler.py  lifecycle.py  messages.py  server_manager.py  subscribe_manager.py  version_manager.py
src/notifypy/: notify.py
src/server/: __init__.py  app.py  ipc_instance.py  router.py  ws.py
src/ui/: layout.py
src/utils/: __init__.py  decorator.py  emoji.py  event.py  ipc.py  log.py  models.py  tool.py  worker.py  ws_client.py  ws_server.py
tests/: test_bilibili.py  test_douyin.py  test_main.py
wwwroot/: index.html
wwwroot/assets/: About-B0GpLGKP.css  About-B5YTHd3J.css  About-BBvLmrcs.js  About-BQBbt0Rx.js  About-BUC-Jurv.js  About-BW3nU42o.js  About-C-QM8i1u.js  About-CiI18gZC.js  About-D-StPvnq.js  About-D9QfRt55.js  About-DV6-jrxL.css  About-Db7_9z3O.js  About-Dd_YFFCj.js  About-Dxz1ZaEG.css  About-EM-YmyCn.js  About-dAyUiXfw.css  About-jR6A_qx1.js  About-jiA5A5pk.js  Changelog--czNfR2N.js  Changelog-B2ynJyOl.js  Changelog-B5BeVF7h.js  Changelog-BQ1enYkD.js  Changelog-BXqXWMVP.js  Changelog-Bue75iFx.js  Changelog-C4H3wrEx.js  Changelog-CUp6fbG1.js  Changelog-CsaDLHDy.js  Changelog-PdptvqPE.js  Changelog-iMQ8w3l5.js  Changelog-kpi0a5L5.js  Changelog-zHcgiuFu.js  (+280 more)
(+232 files in other folders)
