[project]
name = "vsingerboard"
version = "2.0.0b1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "bilibili-api-python>=17.3.0",
    "curl-cffi>=0.13.0",
    "pydantic>=2.11.7",
    "tortoise-orm>=0.25.1",
    "betterproto2>=0.9.0",
    "quickjs>=1.19.4",
    "aerich>=0.9.2",
    "pyautogui>=0.9.54",
    "flet-datatable2>=0.80.5",
    "pandas>=3.0.1",
    "openpyxl>=3.1.5",
    "flet[all]>=0.82.2",
]

[tool.aerich]
tortoise_orm = "src.database.db.TORTISE_ORM"

[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
